# geval

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  NOTICE  README.md  default.nix  geval.cabal  stack.yaml  validate-gonito-net-challenges.sh
app/: Main.hs
misc/challenge-preparation-example/: Makefile
src/: GEval.hs  Lib.hs  OptionsParser.hs
src/Data/: CartesianStrings.hs  NDCG.hs  SplitIntoCrossTabs.hs
src/Data/Conduit/: AutoDecompress.hs  Bootstrap.hs  Header.hs  Rank.hs  SmartSource.hs  Utils.hs
src/Data/Statistics/: Calibration.hs  Kendall.hs  Loess.hs
src/GEval/: Annotation.hs  BIO.hs  BLEU.hs  BlackBoxDebugging.hs  CharMatch.hs  ClippEU.hs  Clippings.hs  ClusteringMetrics.hs  Common.hs  Confidence.hs  Core.hs  CreateChallenge.hs  DataSource.hs  EvaluationScheme.hs  FeatureExtractor.hs  Formatting.hs  Haversine.hs  LineByLine.hs  LogLossHashed.hs  MatchingSpecification.hs  Metric.hs  MetricsMechanics.hs  MetricsMeta.hs  Model.hs  ModelTraining.hs  OptionsParser.hs  ParseParams.hs  PolevalEmotionRecognition.hs  PolevalQuestionAnswering.hs  PrecisionRecall.hs  ProbList.hs  Probability.hs  Purity.hs  Selector.hs  Submit.hs  TextF1.hs  Validation.hs  WER.hs
src/Text/: Tokenizer.hs  WordShape.hs
test/: Spec.hs  create-test.sh
test/_submit-tests/: branch-test.tar  challengeId-test.tar  everythingCommitted-test-neg.tar  everythingCommitted-test-pos.tar  remoteSynced-test-neg.tar  remoteSynced-test-pos.tar  remoteUrl-test.tar  repoRoot-test.tar  token-test-no.tar  token-test-yes.tar
test/_validation/broken-metric/: README.md  config.txt
test/accuracy-filtering/accuracy-filtering/: config.txt
test/accuracy-multiple-filtering/accuracy-multiple-filtering/: config.txt
test/accuracy-on-sorted/accuracy-on-sorted/: config.txt
test/accuracy-probs/accuracy-probs/: config.txt
test/accuracy-with-flags/accuracy-with-flags/: config.txt
test/bio-f1-complex-labels/bio-f1-complex-labels/: config.txt
test/bio-f1-flags/bio-f1-flags/: config.txt
test/bio-f1-perfect/bio-f1-perfect/: config.txt
test/bio-weighted-f1-simple/bio-weighted-f1-simple/: config.txt
test/bleu-complex-bootstrap/bleu-complex-bootstrap/: config.txt
test/bleu-complex/bleu-complex/: config.txt
test/bleu-with-tokenization/bleu-with-tokenization/: config.txt
test/bleu-with-tokenizer/bleu-with-tokenizer/: config.txt
test/cer-mean-simple/cer-mean-simple/: config.txt
test/cer-simple/cer-simple/: config.txt
test/cer-space-escaping/cer-space-escaping/: config.txt
test/charmatch-complex-compressed/charmatch-complex-compressed/: config.txt
test/charmatch-with-header/charmatch-with-header/: config.txt
test/charmatch-with-header/charmatch-with-header-solution/: out.tsv
test/clippeu-simple/clippeu-simple/: config.txt
test/clippeu-simple/clippeu-simple-solution/: out.tsv
test/dos-end-of-line/dos-end-of-line/: config.txt
test/f-measure-all-false/f-measure-all-false/: config.txt
test/f1-with-preprocessing/f1-with-preprocessing/: config.txt
test/f2-simple/f2-simple/: config.txt
test/flags-case-fold/flags-case-fold/: config.txt
test/flags-filter-and-match/flags-filter-and-match/: config.txt
test/flags-filtering/flags-filtering/: config.txt
test/flags-lowercase/flags-lowercase/: config.txt
test/flags-regexp-matching-anchor/flags-regexp-matching-anchor/: config.txt
test/flags-regexp-matching/flags-regexp-matching/: config.txt
test/flags-regexp-substitution-ref/flags-regexp-substitution-ref/: config.txt
test/flags-regexp-substitution/flags-regexp-substitution/: config.txt
test/flags-regexp-token-matching-anchor/flags-regexp-token-matching-anchor/: config.txt
test/flags-regexp-token-matching/flags-regexp-token-matching/: config.txt
test/flags-uppercase/flags-uppercase/: config.txt
test/flc-f1-multi-overlap/flc-f1-multi-overlap/: config.txt
test/fuzzy-match-accuracy/fuzzy-match-accuracy/: config.txt
test/gleu-simple/gleu-simple/: config.txt
test/haversine/haversine/: config.txt
test/improvement-simple/improvement-simple/: config.txt
test/jsonl-simple/jsonl-simple/: config.txt
test/likelihood-hashed-not-normalized/likelihood-hashed-not-normalized/: config.txt
test/likelihood-simple/likelihood-simple/: config.txt
test/log-loss-hashed-probs/log-loss-hashed-probs/: config.txt
test/log-loss-hashed-simple/log-loss-hashed-simple/: config.txt
test/logloss-simple/logloss-simple/: config.txt
test/macro-f-measure-perfect/macro-f-measure-perfect/: config.txt
test/macro-f-measure-simple/macro-f-measure-simple/: config.txt
test/macro-f1-simple/macro-f1-simple/: config.txt
test/macroavg-likelihood/macroavg-likelihood/: config.txt
test/mae-against-interval-simple/mae-against-interval-simple/: config.txt
test/mae-simple/mae-simple/: config.txt
test/mean-multilabel-f1-simple/mean-multilabel-f1-simple/: config.txt
test/mse-simple-headers/mse-simple-headers/: config.txt  out-header.tsv
test/multilabel-f1-ie-flags/multilabel-f1-ie-flags/: config.txt
test/multilabel-f1-ie-fuzzy-harden/multilabel-f1-ie-fuzzy-harden/: config.txt
test/multilabel-f1-ie-fuzzy-smart/multilabel-f1-ie-fuzzy-smart/: config.txt
test/multilabel-f1-ie-fuzzy/multilabel-f1-ie-fuzzy/: config.txt
test/multilabel-f1-with-probs-and-numbers/multilabel-f1-with-probs-and-numbers/: config.txt
test/multilabel-f2-simple/multilabel-f2-simple/: config.txt
test/multilabel-likelihood-simple/multilabel-likelihood-simple/: config.txt
test/ndcg-simple/ndcg-simple/: config.txt
test/nmi-complex/nmi-complex/: config.txt
test/perplexity-hashed-simple/perplexity-hashed-simple/: config.txt
test/probabilistic-f1-simple/probabilistic-f1-simple/: config.txt
test/probabilistic-soft-f1-calibrated/probabilistic-soft-f1-calibrated/: config.txt
test/probabilistic-soft2d-f1-simple/probabilistic-soft2d-f1-simple/: config.txt
test/probabilistic-soft2d-recall-simple/probabilistic-soft2d-recall-simple/: config.txt
test/purity-introduction-to-information-retrieval-example/purity-introduction-to-information-retrieval-example/: config.txt
test/smape-simple/smape-simple/: config.txt
(+182 files in other folders)
