name:                geval
version:             0.2.3.0
synopsis:            Machine learning evaluation tools
description:         Please see README.md
homepage:            http://github.com/name/project
license:             Apache
license-file:        LICENSE
author:              Filip Graliński
maintainer:          filipg@amu.edu.pl
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GEval.Core
                       GEval.CreateChallenge
                     , GEval.OptionsParser
                     , GEval.BLEU
  build-depends:       base >= 4.7 && < 5
                     , cond
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , directory
                     , filepath
                     , here
                     , multiset
                     , optparse-applicative
                     , resourcet
                     , split
                     , text
                     , unix
  default-language:    Haskell2010

executable geval
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , geval
                     , optparse-applicative
  default-language:    Haskell2010

test-suite geval-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , geval
                     , hspec
                     , HUnit
                     , optparse-applicative
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/filipg/geval
