name:                geval
version:             1.35.0.0
synopsis:            Machine learning evaluation tools
description:         Please see README.md
homepage:            http://github.com/name/project
license:             Apache
license-file:        LICENSE
author:              Filip Graliński
maintainer:          filipg@amu.edu.pl
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GEval.Core
                     , GEval.Metric
                     , GEval.MetricsMechanics
                     , GEval.MetricsMeta
                     , GEval.EvaluationScheme
                     , GEval.CreateChallenge
                     , GEval.OptionsParser
                     , GEval.BLEU
                     , GEval.Clippings
                     , GEval.PrecisionRecall
                     , GEval.ClusteringMetrics
                     , GEval.Common
                     , GEval.Probability
                     , GEval.LogLossHashed
                     , GEval.CharMatch
                     , GEval.LineByLine
                     , GEval.BIO
                     , GEval.ParseParams
                     , GEval.ProbList
                     , GEval.Submit
                     , GEval.Validation
                     , Data.Conduit.AutoDecompress
                     , Data.Conduit.SmartSource
                     , Data.Conduit.Rank
                     , GEval.FeatureExtractor
                     , GEval.WER
                     , Text.Tokenizer
                     , GEval.Annotation
                     , GEval.BlackBoxDebugging
                     , Text.WordShape
                     , Data.Statistics.Kendall
                     , GEval.Selector
                     , Data.Statistics.Loess
                     , Data.Statistics.Calibration
                     , Data.CartesianStrings
                     , Data.SplitIntoCrossTabs
                     , Data.Conduit.Bootstrap
                     , GEval.Formatting
                     , Data.Conduit.Header
                     , GEval.DataSource
                     , GEval.Model
                     , GEval.ModelTraining
                     , GEval.MatchingSpecification
                     , Paths_geval
  build-depends:       base >= 4.7 && < 5
                     , cond
                     , conduit >= 1.3.0
                     , conduit-combinators
                     , conduit-extra
                     , directory
                     , filepath
                     , here
                     , multiset
                     , optparse-applicative
                     , resourcet
                     , split
                     , text
                     , unix
                     , fgl
                     , attoparsec
                     , unordered-containers
                     , hashable
                     , murmur3
                     , vector
                     , mtl
                     , edit-distance
                     , bytestring
                     , http-conduit
                     , transformers
                     , word8
                     , primitive
                     , transformers-base
                     , bzlib-conduit
                     , lzma-conduit
                     , Glob
                     , naturalcomp
                     , containers
                     , statistics
                     , pcre-heavy
                     , pcre-light
                     , process
                     , uri-encode
                     , MissingH
                     , array
                     , Munkres
                     , vector-algorithms
                     , aeson
                     , aeson-pretty
                     , integration
                     , Chart
                     , Chart-cairo
                     , errors
                     , filemanip
                     , temporary
                     , utf8-string
                     , singletons
                     , ordered-containers
                     , random
                     , rainbow
                     , yaml
                     , extra
  default-language:    Haskell2010

executable geval
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -qg"
  build-depends:       base
                     , geval
                     , optparse-applicative
                     , fgl
                     , filepath
                     , containers
                     , unordered-containers
                     , text
  default-language:    Haskell2010

test-suite geval-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , geval
                     , hspec
                     , HUnit
                     , optparse-applicative
                     , text
                     , attoparsec
                     , edit-distance
                     , resourcet
                     , conduit
                     , conduit-extra
                     , conduit
                     , containers
                     , process
                     , directory
                     , temporary
                     , silently
                     , vector
                     , statistics
                     , filepath
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://gonito.net/geval
